--- a/misc_optimization_sphere4d_benchmark_en.ipynb
+++ b/misc_optimization_sphere4d_benchmark_en.ipynb
@@ -148,7 +148,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "eval_error_array_list = []\n",
+    "bh_eval_error_array_list = []\n",
     "\n",
     "NUM_RUNS = 100\n",
     "\n",
@@ -183,16 +183,7 @@
     "    #print(\"Number of evaluations of the jacobian:\", res.njev)\n",
     "    #print(\"Number of iterations performed by the optimizer:\", res.nit)\n",
     "    \n",
-    "    eval_error_array_list.append(eval_error_array);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_err_wt_num_feval(array_list_to_array(eval_error_array_list), x_log=True, y_log=True, plot_option=\"mean\")"
+    "    bh_eval_error_array_list.append(eval_error_array);"
    ]
   },
   {
@@ -210,7 +201,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "eval_error_array_list = []\n",
+    "de_eval_error_array_list = []\n",
     "\n",
     "NUM_RUNS = 100\n",
     "\n",
@@ -242,16 +233,7 @@
     "    #print(\"Number of evaluations of the jacobian:\", res.njev)\n",
     "    #print(\"Number of iterations performed by the optimizer:\", res.nit)\n",
     "    \n",
-    "    eval_error_array_list.append(eval_error_array);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_err_wt_num_feval(array_list_to_array(eval_error_array_list), x_log=True, y_log=True, plot_option=\"mean\")"
+    "    de_eval_error_array_list.append(eval_error_array);"
    ]
   },
   {
@@ -278,7 +260,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "eval_error_array_list = []\n",
+    "saes_eval_error_array_list = []\n",
     "\n",
     "NUM_RUNS = 100\n",
     "\n",
@@ -289,7 +271,7 @@
     "    func.reset_eval_counters()\n",
     "    func.reset_eval_logs()\n",
     "\n",
-    "    res = saes.minimize(func, init_pop_mu=0., init_pop_sigma=1., lmb=6)\n",
+    "    res = saes.minimize(func, init_pop_mu=0., init_pop_sigma=6., mu=3, lmb=6)\n",
     "\n",
     "    func.do_eval_logs = False\n",
     "\n",
@@ -297,7 +279,7 @@
     "\n",
     "    print(\"x* =\", res)\n",
     "    \n",
-    "    eval_error_array_list.append(eval_error_array);"
+    "    saes_eval_error_array_list.append(eval_error_array);"
    ]
   },
   {
@@ -306,7 +288,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_err_wt_num_feval(array_list_to_array(eval_error_array_list), x_log=True, y_log=True, plot_option=\"mean\")"
+    "fig, ax = plt.subplots(figsize=(12, 8))\n",
+    "\n",
+    "#plot_err_wt_num_feval(array_list_to_array(bh_eval_error_array_list), x_log=True, y_log=True, ax=ax, label=\"Basin Hopping\", plot_option=\"mean\")\n",
+    "plot_err_wt_num_feval(array_list_to_array(de_eval_error_array_list), x_log=True, y_log=True, ax=ax, label=\"Differential Evolution\", plot_option=\"mean\")\n",
+    "plot_err_wt_num_feval(array_list_to_array(saes_eval_error_array_list), x_log=True, y_log=True, ax=ax, label=\"SAES\", plot_option=\"mean\")\n",
+    "\n",
+    "ax.legend(fontsize='x-large')\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
